# ldap-gitlab-sync

./: .env.template  README.md  pyproject.toml
ldap_gitlab_sync/: gitlab.py  ldap.py  sync.py  util.py
referat_gitlab_sync/: referate.py
tests/: test_referat_gitlab_sync.py
